# vidra

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
scripts/ffmpeg/: build-release.mjs  prepare.mjs  sources.json
scripts/icons/: prepare-macos.mjs
scripts/release/: check-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/Vidra.icon/: icon.json
src-tauri/src/: diagnostics.rs  error.rs  lib.rs  main.rs  output.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ffmpeg/: binary.rs  encode.rs  mod.rs  paths.rs  probe.rs  progress.rs  queue.rs  types.rs
src-tauri/src/ffmpeg/encode/: audio.rs  video.rs
src-tauri/src/history/: manager.rs  mod.rs  platform.rs  tests.rs  types.rs
src-tauri/src/jobs/: manager.rs  mod.rs  process.rs  types.rs
src-tauri/src/jobs/manager/: tests.rs
src/app/: App.tsx  viewMeta.ts
src/config/: advanced.ts  encoding.ts  profiles.test.ts  profiles.ts  quality.ts  resolution.ts
src/hooks/: useConversionHistory.ts  useEncodingProfiles.ts  useEncodingQueue.ts  useFfmpegStatus.ts
src/lib/: color.ts  format.ts  history.ts  queue.test.ts  queue.ts  tracks.ts
src/services/: diagnostics.ts  encoding.ts  files.ts  history.ts
src/styles/: base.css  conversion.css  shell.css  tokens.css  views.css
(+21 files in other folders)
