[package]
name = "vidra"
version = "0.1.0"
description = "Open-source video conversion and encoding for the desktop"
authors = ["Mathieu Mafille"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/mathieumaf/vidra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vidra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
